# ControlCompatition

VtdRosConnector/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
VtdRosConnector/install/include/common_msgs/: Perceptionobjects.h
VtdRosConnector/install/include/control_msgs/: Jinlong_Control_Command.h  Jinlong_Control_ModeFlag.h
VtdRosConnector/install/include/map_msgs/: RoutePlan.h  TrafficEventInfo.h
VtdRosConnector/install/include/perception_msgs/: SingleTrafficLight.h
VtdRosConnector/install/include/vehicle_msgs/: VehicleSystem.h
VtdRosConnector/install/lib/pkgconfig/: common_msgs.pc  control_msgs.pc  diag_msgs.pc  map_msgs.pc  perception_msgs.pc  rosToVtd.pc  vehicle_msgs.pc  vtdToRos.pc
VtdRosConnector/install/lib/rosToVtd/: rosToVtd
VtdRosConnector/install/lib/vtdToRos/: vtdToRos
VtdRosConnector/install/share/rosToVtd/: package.xml
VtdRosConnector/install/share/vehicle_msgs/: package.xml
VtdRosConnector/install/share/vtdToRos/: package.xml
control/install/: .rosinstall  local_setup.sh  setup.sh
control/install/include/common_msgs/: CICV_Location.h  FaultVec.h  Retrieval.h  SpeedStreer.h  VehicleDebug.h
control/install/include/control/: dynamicConfig.h
control/install/include/control_msgs/: Control_Command.h  (+1 more)
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: Controller.pc
planner_tracking/install/: .rosinstall  local_setup.sh  setup.sh
src/Controller/: CMakeLists.txt  package.xml
src/Controller/include/: Common.hh  LQRController.hh  LQRController1.hh  MPCController.h  PIDController.hh  calibration.txt  calibration_table_copy.txt  interpolation_2d.h  leadlag_controller.h
src/Controller/include/common_msgs/: Control_Test.h  Perceptionobject.h  Vehicle_Control.h
src/Controller/include/diag_msgs/: VehicleAutoMode.h
src/Controller/include/map_msgs/: TrafficEvent.h
src/Controller/include/perception_msgs/: CtrlTest.h  PerceptionObjects.h  Point64.h  PolygonStamped.h  TrajectoryInfo.h
src/Controller/src/: MPCController.cpp  data.cpp  demp.py  interpolation_2d.cc  leadlag_controller.cc  main.cpp  tt.py
(+444 files in other folders)
